A parte final do projeto

--- a/TelaAnunciosPublicados/index.html
+++ b/TelaAnunciosPublicados/index.html
@@ -24,7 +24,7 @@
       <div class="row">
         <a href="../TelaPrincipal/index.html">
         <div class="col-lg-2">
-          <img class="img-fluid" src="imagens/logo.png" alt="" style="max-width: 130px"></a>
+          <img class="img-fluid" src="../imagens/logo.png" alt="" style="max-width: 130px"></a>
         </div>
         <div class="col-lg-5">
           <div class="row h-140">
@@ -36,7 +36,7 @@
                 <div class="input-group">
                   <input class="form-control form-control-sm" type="search" placeholder="Buscar PET">
                   <button class="btn btn-outline-dark bg-light" type="submit">
-                    <img src="imagens/lupa.png" alt="" style="height: 17px" width="18px">
+                    <img src="../imagens/lupa.png" alt="" style="height: 17px" width="18px">
                   </button>
                 </div>
               </form>
@@ -50,7 +50,7 @@
                 <div class="container-fluid">
                   <div class="collapse navbar-collapse justify-content-end">
                     <div class="navbar-nav">
-                      <a class="nav-link" href="../TelaCriarAnuncio/index.html" style="margin-right: 0;">| Criar Anúncio |</a>
+                      <a class="nav-link" href="../TelaCriarAnuncio/index.html" style="margin-right: 0;">| Criar Anúncio |</a><a class="nav-link" href="../TelaLoginECadastro/login.html">|  Sair </a>
                     </div>
                   </div>
                 </div>
@@ -67,11 +67,12 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <h1 class="tituloanuncio mt-4">Meus Anúncios</h1>
-          <h2 class="subanuncio mt-4">Anúncios Publicados:</h2>
+          <h2 class="subanuncio mt-4">Anúncios Publicados por <span id="usuario-logado"></span>:</h2>
         </div>
         <div class="row" id="meusAnuncios">
         </div>
     </section>
+    
 
   </div>
 
@@ -81,9 +82,9 @@
         <div class="col-md-4">
           <h2 class="text-center">Siga-nos</h2>
           <div class="text-center">
-            <a href="https://www.instagram.com/napucminas/"><img src="imagens/insta.png" style="max-width: 40px" alt="Instagram"></a>
+            <a href="https://www.instagram.com/napucminas/"><img src="../imagens/insta.png" style="max-width: 40px" alt="Instagram"></a>
             <a href="https://www.facebook.com/pucminasoficial">
-            <img src="imagens/face.png" style="max-width: 40px" alt="Facebook"></a>
+            <img src="../imagens/face.png" style="max-width: 40px" alt="Facebook"></a>
           </div>
         </div>
         <div class="col-md-3">
