--- a/TelaSobreNos/index.html
+++ b/TelaSobreNos/index.html
@@ -52,7 +52,7 @@
                   <div class="collapse navbar-collapse justify-content-end">
                     <div class="navbar-nav">
                       <a class="nav-link" href="../TelaAnunciosPublicados/index.html"> Meus anúncios |</a>
-                      <a class="nav-link" href="../TelaCriarAnuncio/index.html"> Criar Anúncio</a>
+                      <a class="nav-link" href="../TelaCriarAnuncio/index.html"> Criar Anúncio</a><a class="nav-link" href="../TelaLoginECadastro/login.html">|  Sair </a>
                     </div>
                   </div>
                 </div>
