--- a/TelaCriarAnuncio/index.html
+++ b/TelaCriarAnuncio/index.html
@@ -1,101 +1,136 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- Links bootstrap, css e javascript-->
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Pets Finder</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-sjUHceK/f7ZRWf8sGgHy6mXK+TjRStsiVYmGoHHav6lI6sFKj1h63dX75i5pIYrD"
-          crossorigin="anonymous"></script>
-      
-      </head>
+
+<head>
+  <!-- Links bootstrap, css e javascript-->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Pets Finder</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-sjUHceK/f7ZRWf8sGgHy6mXK+TjRStsiVYmGoHHav6lI6sFKj1h63dX75i5pIYrD"
+    crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+
+
+</head>
+
 <body>
-    <header>
-        <div class="container-fluid custom-bg-color rounded sticky-top">
-          <div class="row">
-            <a href="../TelaPrincipal/index.html">
-            <div class="col-lg-2">
-              <img class="img-fluid" src="imagens/logo.png" alt="" style="max-width: 130px"></a>
+  <header>
+    <div class="container-fluid custom-bg-color rounded sticky-top">
+      <div class="row">
+        <a href="../TelaPrincipal/index.html">
+          <div class="col-lg-2">
+            <img class="img-fluid" src="../imagens/logo.png" alt="" style="max-width: 130px"></a>
+          </div>
+        <div class="col-lg-5">
+          <div class="row h-140">
+            <div class="col pt-3">
+              <h6 class="texto1 ms-4">Vamos achar um LAR para seu PET?</h6>
             </div>
-            <div class="col-lg-5">
-              <div class="row h-140">
-                <div class="col pt-5">
-                  <h6 class="texto1 ms-5">Vamos achar um lar para seu PET?</h6>
-                </div>
-                <div class="col-lg-12">
-                
-                </div>
-              </div>
-            </div>
+
           </div>
         </div>
-      </header>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8">
-            <div class="sidebar">
-              <div class="form-section">
-                <br>
-                <h3>Nome do Animal</h3>
-                <input id="titulo-input" type="text" placeholder="Digite o Nome do Animal" required>
-              </div>
-              <div class="form-section">
-                <h3>Seu nome</h3>
-                <input id="nome-input" type="text" placeholder="Digite o nome" required>
-              </div>
-              <div class="form-section">
-                <h3>Qual a espécie do animal?</h3>
-                <select id="especie-select">
-                  <option value="gato">Gato</option>
-                  <option value="cachorro">Cachorro</option>
-                </select>
-              </div>
-              <div class="form-section">
-                <h3>Qual a raça do animal?</h3>
-                <input id="raca-input" type="text" placeholder="Digite a raça do animal">
-              </div>
-              <div class="form-section">
-                <h3>Fotos</h3>
-                <input id="foto-input" type="file" multiple>
-              </div>
-              <div class="form-section">
-                <h3>Descrição</h3>
-                <textarea id="descricao-input" placeholder="Digite a descrição" required></textarea>
-              </div>
-              <div class="form-section">
-                <h3>CEP</h3>
-                <input id="cep-input" type="text" placeholder="Digite o CEP" required>
-              </div>
-              <div class="form-section">
-                <h3>Telefone de Contato</h3>
-                <input id="telefone-input" type="text" placeholder="Digite o telefone" required>
-              </div>
-              <form id="myForm" action="index.html">
-                <div class="form-section">
-                  <!-- Ao enviar o formulário de anúncio, o mesmo deve ir para tela inicial e para aba "meus anúncios" do usuário registrado.-->
-                  <button type="submit" form="myForm">Enviar</button>
+        <div class="col-lg-5">
+          <div class="row">
+            <div class="col-lg-12">
+              <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                  <div class="collapse navbar-collapse justify-content-end">
+                    <div class="navbar-nav">
+                      <a class="nav-link" href="../TelaAnunciosPublicados/index.html" style="margin-right: 0;">| Meus
+                        Anuncios<a class="nav-link" href="../TelaCriarAnuncio/index.html">|<a class="nav-link"
+                            href="../TelaLoginECadastro/login.html"> Sair </a>
+                    </div>
+                  </div>
                 </div>
-              </form>
-            </div>
-          </div>
-          <div class="col-md-3 d-flex justify-content-end">
-            <div>
-              <img src="imagens/fone.png" alt="fone">
+              </nav>
             </div>
           </div>
         </div>
       </div>
+    </div>
+  </header>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 mx-auto">
+        <div class="sidebar">
+          <div class="form-section">
+            <br>
+            <h3>Nome do Animal:</h3>
+            <input id="titulo-input" class="form-control" type="text" placeholder="Digite o Nome do Animal" required>
+            <br>
+          </div>
+          <div class="form-section">
+            <h3>Seu Nome:</h3>
+            <input id="nome-input" class="form-control" type="text" placeholder="Digite o nome" required>
+            <br>
+          </div>
+          <div class="form-section">
+            <h3>Qual a Espécie do Animal?</h3>
+            <select id="especie-select" class="form-select">
+              <option value="gato">Gato</option>
+              <option value="cachorro">Cachorro</option>
+
+            </select>
+          </div>
+          <br>
+          <div class="form-section">
+            <h3>Qual o Porte do Animal?</h3>
+            <select id="porte-select" class="form-select">
+              <option value="pequeno">Pequeno</option>
+              <option value="medio">Medio</option>
+              <option value="grande">Grande</option>
+            </select>
+          </div>
+          <br>
+          <div class="form-section">
+            <h3>Qual a Raça do Animal?</h3>
+            <input id="raca-input" class="form-control" type="text" placeholder="Digite a raça do animal">
+
+          </div>
+          <br>
+          <div class="form-section">
+            <h3>Foto:</h3>
+            <input id="foto-input" class="form-control" type="file" multiple>
+          </div>
+          <br>
+          <div class="form-section">
+            <h3>Descrição:</h3>
+            <textarea id="descricao-input" class="form-control" placeholder="Digite a descrição" required></textarea>
+
+          </div>
+          <br>
+          <div class="form-section">
+            <h3>CEP:</h3>
+             <input id="cep-input" class="form-control" type="text" placeholder="Digite o CEP" required>
+            <br>
+          </div>
+          <div class="form-section">
+            <h3>Telefone de Contato:</h3>
+            <input id="telefone-input" class="form-control" type="text" placeholder="Digite o telefone" required>
+            <br>
+          </div>
+          <form id="myForm" action="index.html">
+            <div class="form-section">
+              <!-- Ao enviar o formulário de anúncio, o mesmo deve ir para tela inicial e para aba "meus anúncios" do usuário registrado.-->
+              <button id="submit-button" class="btn btn-primary" type="submit" form="myForm">Enviar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="scripts.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-sjUHceK/f7ZRWf8sGgHy6mXK+TjRStsiVYmGoHHav6lI6sFKj1h63dX75i5pIYrD"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
