--- a/TelaLoginECadastro/login.html
+++ b/TelaLoginECadastro/login.html
@@ -18,13 +18,19 @@
             background-repeat: repeat;
             background-size: cover;
         }
+        
+        #message-container {
+            display: none;
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #f8f9fa;
+            border-radius: 5px;
+        }
     </style>
     <script src="script.js"></script>
 </head>
 
 <body>
-
-
     <div class="container">
         <img src="imgs/Meu projeto.png" width="300" class="d-inline-block align-top" alt="Logo">
         <h1>Login</h1>
@@ -39,7 +45,8 @@
         <div class="button-group">
             <button onclick="login()" class="btn btn-primary">Entrar</button>
             <button onclick="registerRedirect()" class="btn btn-secondary">Registre-se</button>
-          </div>
+        </div>
+        <div id="message-container"></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
